# world-cup-22-backend

./: README.md  data1.json  data2.json  data3.json  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  serializers.py
accounts/migrations/: 0001_initial.py  0002_customuser_mobile.py
api/: api.py  permissions.py  serializers.py  tests.py  urls.py  views.py
worldcup/: .env  asgi.py  settings.py  urls.py  views.py  wsgi.py
worldcup22/: admin.py  apps.py  models.py
worldcup22/migrations/: 0001_initial.py  0002_alter_match_number_of_tickets.py  0002_auto_20220104_1855.py  0002_feedback.py  0002_ticket_certificate.py  0002_ticket_delete_worldcup22.py  0003_alter_match_number_of_tickets.py  0004_ticket_purchased.py  0005_alter_ticket_purchased.py  0006_remove_ticket_purchased_and_more.py  0007_ticket_purchased.py  0008_alter_ticket_match.py  0009_alter_ticket_match.py  0010_remove_ticket_title.py  0011_vote.py  0012_remove_match_created_date_remove_match_updated_date_and_more.py  0013_auto_20220101_1737.py  0014_auto_20220101_1800.py  0015_auto_20220103_0950.py
